poritt/examples/errors/error-u-not-u.ptt
define foo : U -> U = U
